Update DESCRIPTION + more edits (#8)
* update DESCRIPTION fields

* mention AirMeet arena booth

* mention that the Airmeet booth are available outside live sessions

--- a/index.Rmd
+++ b/index.Rmd
@@ -22,7 +22,7 @@ layout: true
 
 <div class="my-footer"><span>
 Kevin Rue-Albrecht
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 BiocChallenges
 </span></div>
 
@@ -62,30 +62,6 @@ knitr::include_graphics("img/minions.jpg")
 
 ---
 
-# A (biased) example
-
-Once upon a conference, four postdocs sat together at a break.
-
-**Postdoc 1:** "There's so much single-cell data out there... Always the same plots... Sometimes I wish we had a Shiny app to visualise any data stored in any `SummarizedExperiment` object."
-
-**Postdoc 2:** "Me too! That would be so helpful to share with collaborators too!"
-
-**Postdoc 3:** "Well, I've written a bunch of Shiny apps before. I'd love to help with that."
-
-**Postdoc 4:** "Do you know about Shiny dashboards? Mind if I set up the app structure?"
-
-**Postdoc 2:** _(Opening up a laptop)_ "All right, let me create a GitHub repository and add you."
-
-**Postdoc 3:** "Great idea! Also, let's create a README and write out wish list of functionality."
-
-**Postdoc 1:** "I'll create a Slack channel to keep the conversation going".
-
-_(By the end of the conference)_ `SummarizedExplorer` was born (and later renamed `iSEE`!).
-
-See the initial README at <https://github.com/iSEE/iSEE/tree/021e3e2>
-
----
-
 # The benefits of collaborations
 
 .pull-left[
@@ -111,6 +87,32 @@ knitr::include_graphics("img/minions-teamwork.png")
 - Share the challenges and rewards of trying and working out an exciting idea together!
 
 - Connect with like-minded community members at all career stages.
+
+---
+
+# A (real) example
+
+.center[
+_Once upon a EuroBioc conference, four postdocs sat together at a break._
+]
+
+**Postdoc 1:** "There's so much single-cell data out there... Always the same plots... Sometimes I wish we had a Shiny app to visualise any data stored in any `SummarizedExperiment` object."
+
+**Postdoc 2:** "Me too! That would be so helpful to share with collaborators too!"
+
+**Postdoc 3:** "Well, I've written a bunch of Shiny apps before. I'd love to help with that."
+
+**Postdoc 4:** "Do you know about Shiny dashboards? Mind if I set up the app structure?"
+
+**Postdoc 2:** _(Opening up a laptop)_ "Alright, let me create a GitHub repository and add you."
+
+**Postdoc 3:** "Great idea! Also, let's create a README and write out wish list of functionality."
+
+**Postdoc 1:** "I'll create a Slack channel to keep the conversation going".
+
+_(By the end of the conference)_ `SummarizedExplorer` was born (and later renamed `iSEE`!).
+
+See the initial README at <https://github.com/iSEE/iSEE/tree/021e3e2>
 
 ---
 
@@ -210,7 +212,8 @@ knitr::include_graphics("img/minion-taking-notes.jpg")
 <i class="far fa-comments"></i> Network and communicate.
 
 - On the conference platform<br/>
-  (e.g., lounge, chat).
+  (e.g., booth, lounge, chat).<br/>
+  _Also available outside live sessions._
 
 - On the Bioconductor Slack at <https://community-bioc.slack.com>.
 
